Design of a PWA login screen (not functional, needs to be tested on mobile)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,64 @@
 <!DOCTYPE html>
-<html>
-<head>  
+<html lang="en">
+
+<head>
+	<title>Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<script src="https://code.iconify.design/1/1.0.0-rc7/iconify.min.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="./styles/main.css">
+	
+	<link rel="icon" href="./images/icons/GIVT_logo_125x125.png">
 </head>
-<body>  
+
+<body>
+
+	<div class="limiter">
+		<div class="login-container">
+			<div class="login-wrap">
+				<form class="login-form">
+
+					<div class="login-form-header">
+						<div class="login-form-title">
+							Login
+						</div>
+						<span id="login-form-leave">
+							<i class="iconify"  data-icon="mdi:arrow-left-circle-outline"> </i>
+						</span>
+					</div>
+
+					<div class="login-form-text">
+						To get access to your account we would like to <br> make sure that you are you.
+					</div>
+
+					<div class="login-form-inputarea">
+						<input class="login-inputfield" type="text" autocomplete="email" placeholder="Email">
+					</div>
+
+					<div class="login-form-inputarea">
+						<span id="login-eye">
+							<i class="iconify" data-icon="zmdi-eye"></i>
+						</span>
+						<input class="login-inputfield" type="password" autocomplete="current-password"
+							placeholder="Password">
+					</div>
+
+					<div class="login-form-forgotpswd">
+						<a href="#">
+							Forgot your password?
+						</a>
+					</div>
+
+					<div class="login-form-btn">
+						<button type="submit" class="login-form-btnLogin">Login</button>
+					</div>
+
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
