--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://code.iconify.design/1/1.0.0-rc7/iconify.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="./styles/main.css">
-	
+	<link rel="manifest" href="./manifest.json">
 	<link rel="icon" href="./images/icons/GIVT_logo_125x125.png">
 </head>
 
